# TradingLab

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Mean_R.txt  README.md  RUNBOOK.md  SESSION_NOTES.md  SUPPORT.md  cypress.config.js  eslint.config.cjs.bak  jest.config.cjs  package-lock.json  package.json  pyproject.toml  requirements-gui.txt  requirements.txt  roadmap.txt
adapters/: __init__.py
ai_assist/: __init__.py  artifacts.py  controlled_english.py
config/: __init__.py  config_loader.py  defaults.yml  ema_crossover.yml  market_loader.py  market_profiles.yml  master_filters.yml  master_trade_management.yml  schema.py  validation_criteria.yml
docs/: ENVIRONMENT.md  README.md  SESSION_NOTES.md
engine/: __init__.py  account.py  backtest_engine.py  broker.py  live_trading_engine.py  market.py  market_spec.py  market_units.py  resampler.py
experiments/: __init__.py  registry.py
gui_launcher/: __init__.py  app.py  builder_v3_permission_examples.py  builder_v3_routes.py  bundles.py  runner.py
metrics/: __init__.py  edge_latency.py  metrics.py  mfe_mfa_analysis.py
repro/: __init__.py  dataset_manifest.py
research/: __init__.py  compiler.py  dsl.py  indicators.py  nl_parser.py  spec.py
scripts/: analyze_random_entry_samples.py  build_strategy_from_english.py  build_strategy_from_notes_ai.py  build_strategy_from_spec.py  collect_guided_live_logs.js  collect_guided_logs.js  consolidate_data.py  debug_backtest_comparison.py  download_data.py  fill_timegrid.py  optimize_strategy.py  resample_ohlcv.py  run_backtest.py  (+14 more)
(+311 files in other folders)
